# packson

./: pyproject.toml
packson/: __init__.py  detect.py  mergeapp.py  mergedriver.py  merging.py
